src/objects/Relay__c.object
<CustomObject>
    <fields>
        <fullName>DeviceEndPointUrl__c</fullName>
        <label>DeviceEndPointUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HADevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HADevice</label>
        <referenceTo>HADevice__c</referenceTo>
        <relationshipLabel>Relays</relationshipLabel>
        <relationshipName>Relays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetworkFailureRecorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetworkFailureOccurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_Mode__c</fullName>
        <label>Operating Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fresh-Start</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cloud-Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relay</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relay Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>